// Code generated by dbml-gen-go-model. DO NOT EDIT.
// Supported by duythinht@2020
package records

// SignalsStatus is generated type for table 'signals_statuses'
type SignalsStatus struct {
	ID int64 `db:"id" json:"id" mapstructure:"id"`
	// Имя статуса
	Name string `db:"name" json:"name" mapstructure:"name"`
}

// table 'signals_statuses' columns list struct
type __tbl_signals_statuses_columns struct {
	ID   string
	Name string
}

// table 'signals_statuses' metadata struct
type __tbl_signals_statuses struct {
	Name    string
	Columns __tbl_signals_statuses_columns
}

// table 'signals_statuses' metadata info
var _tbl_signals_statuses = __tbl_signals_statuses{
	Columns: __tbl_signals_statuses_columns{
		ID:   "id",
		Name: "name",
	},
	Name: "signals_statuses",
}

// GetColumns return list columns name for table 'signals_statuses'
func (*__tbl_signals_statuses) GetColumns() []string {
	return []string{"id", "name"}
}

// T return metadata info for table 'signals_statuses'
func (*SignalsStatus) T() *__tbl_signals_statuses {
	return &_tbl_signals_statuses
}
